--- a/style.css
+++ b/style.css
@@ -64,3 +64,17 @@ body{
 
     font-size: 6rem;
 }
+
+#start-menu{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#start-buttons{
+    padding: 1rem;
+    display: flex;
+    width: 25%;
+    justify-content: space-between;
+}
