--- a/style.css
+++ b/style.css
@@ -152,3 +152,23 @@ body{
     animation-delay: 0s;
     animation-fill-mode: forwards;
 }
+
+.labels{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    padding-right: 1rem;
+}
+.inputs{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#labels-and-inputs{
+    display: flex;
+    flex-direction: row;
+}
